--- a/src/components/TabLyouts/TabLayout.module.css
+++ b/src/components/TabLyouts/TabLayout.module.css
@@ -4,10 +4,32 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.TabButtonContainer{
+.TabBarContainer {
   display: flex;
   flex-direction: row;
-  height: 3rem;
+  height: 2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+.TabButtonContainer{
+  width: 150px;
+  font-size: 11pt;
+  height: 2rem;
+
+  border: 0px;
+  border-bottom: 1px;
+  border-color: black;
+  border-style: solid;
+}
+.TabButtonContainerActive{
+  border: 1px solid darkblue;
+  border-bottom: 0;
+  border-width: 1px;
+  color: black;
+  background-color: white;
+  font-size: 11pt;
+  width: 150px;
+  outline: 0;
 }
 .TabContentContainer{
   display: flex;
@@ -16,9 +38,11 @@
 .TabButton{
   border: none;
   background-color: transparent;
-  font-size: 12pt;
-  width: 200px;
+  width: 150px;
+  font-size: 11pt;
   outline: 0;
+  height: 2rem;
+  line-height: 2rem;
 }
 .TabContent{
   display: flex;
@@ -27,7 +51,16 @@
 }
 .UnderlineActive {
   background-color: dodgerblue;
-  height: 5px;
-  width: 200px;
-  border-radius: 10px;
+  height: 1px;
+  width: 150px;
+}
+.UnderlineRest{
+  height: 2rem;
+  flex : 1;
+  justify-content: flex-start;
+  vertical-align: bottom;
+  border: 0px;
+  border-bottom: 1px;
+  border-color: black;
+  border-style: solid;
 }
