Adding Some Filter Actions

--- a/src/components/TableFilters/TableFilters.module.css
+++ b/src/components/TableFilters/TableFilters.module.css
@@ -7,15 +7,16 @@
 }
 .RightHandSide{
     display: flex;
-    /* flex-wrap: wrap; */
+    margin-top: 5px;
     align-content: flex-end;
 }
 .EmptySpace{
     display: flex;
     flex: 1;
+    margin-top: 5px;
 }
 .LeftHandSide{
     display: flex;
-    /* flex-wrap: wrap; */
+    margin-top: 5px;
     align-content: flex-start;
 }
